Implement file uploads in such a way to support the automatic scaling of images into multiple sizes for use within your views.

--- a/config/storage.yml
+++ b/config/storage.yml
@@ -1,4 +1,10 @@
+test:
+  service: Disk
+  root: <%= Rails.root.join("tmp/storage") %>
 
+local:
+  service: Disk
+  root: <%= Rails.root.join("storage") %>
 google:
   service: GCS
   project: "vocal-affinity-427706-a4"
